<resources>
    <string name="app_name">Kontroller</string>
    <string name="action_settings">Settings</string>
    <string name="action_keyboard_title">Keyboard Toggle</string>
    <string name="action_check">(N)</string>
    <string name="action_tool_tip">Toggle to switch(Ctrl/Alt/Wn Keys) from click_each_time(Normal) state to key_pressed(Hold) state</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_pairable">Make Device Visible</string>
    <string name="action_autopair">Enable AutoPair</string>
    <string name="auto_pair_flag">autopairfl</string>
    <string name="title_screen_on">Screen Always On</string>
    <string name="action_ble_status_tool_tip">App not connected via bluetooth</string>

    <string name="screen_on_flag">screenonfl</string>
    <string name="change_mode_tooltip">If checked the gyroscope can be used to control the mouse pointer</string>
    <string name="change_trackpad_mode">Change trackpad mode</string>
    <string name="track_pad_mode_flag">trackpadModeEnabled</string>
    <string name="keyboard_enabled">keyboardEnabled</string>
    <string name="enable_gyro">Enable Gyroscope Control</string>
</resources>
