<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
            android:id="@+id/check_modifier_state"
            android:title="@string/action_check"
            android:showAsAction="ifRoom|withText"


    />

    <item
            android:id="@+id/action_keyboard"
            android:icon="@drawable/ic_action_keyboard"
            android:title="@string/action_keyboard_title"
            android:showAsAction="always"
           />



    <!-- Settings, should always be in the overflow -->

    <item android:id="@+id/action_disconnect"
          android:title="@string/action_disconnect"
          android:showAsAction="never"

    />
    <item android:id="@+id/action_autopair"
          android:title="@string/action_autopair"
          android:checkable="true"
          android:showAsAction="never"

    />

    <item android:id="@+id/action_screen_on"
          android:title="@string/title_screen_on"
          android:checkable="true"
          android:showAsAction="never"

    />



    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never"

          />
</menu>